tests/parsing/smtlib/v2.6/errors/032_match_case_list_unclosed_2.expected
File "tests/parsing/smtlib/v2.6/errors/032_match_case_list_unclosed_2.smt2", line 3, character 40-43:
3 | (define-fun f ((x t)) t (match x ((A B) foo)))
                                            ^^^
Error while parsing a list of match cases, read the symbol 'foo',
      but expected a closing parenthesis or a match case of the form
      "(pattern body)".
